[gd_scene load_steps=59 format=3 uid="uid://clbto1cshblaw"]

[ext_resource type="Theme" uid="uid://xxj7abqbehjg" path="res://addons/hengo/references/theme/main.tres" id="1_2muha"]
[ext_resource type="Script" uid="uid://isaus02qqnxg" path="res://addons/hengo/scripts/hengo_root.gd" id="2_velgh"]
[ext_resource type="Script" uid="uid://cupav3ek86tky" path="res://addons/hengo/scripts/cam.gd" id="3_84akk"]
[ext_resource type="Texture2D" uid="uid://bphiia4jm8ubg" path="res://addons/hengo/assets/images/line.png" id="7_6jref"]
[ext_resource type="Script" uid="uid://ckwbirfiedarl" path="res://addons/hengo/scripts/connection_guide.gd" id="7_gj1gq"]
[ext_resource type="Script" uid="uid://dcs554q3syj4q" path="res://addons/hengo/scripts/cnode_action_bar.gd" id="7_sagw0"]
[ext_resource type="PackedScene" uid="uid://crsj5ij47bnr2" path="res://addons/hengo/scenes/utils/popup_container.tscn" id="8_uxy8l"]
[ext_resource type="Shader" uid="uid://cq7sij4xolke1" path="res://addons/hengo/assets/shaders/grid.gdshader" id="9_5sxro"]
[ext_resource type="Texture2D" uid="uid://dc5sqlfedwhvg" path="res://icon.svg" id="9_si04b"]
[ext_resource type="PackedScene" uid="uid://bd8qatv1gtb" path="res://addons/hengo/scenes/drop_down_menu.tscn" id="9_xwbyp"]
[ext_resource type="Script" uid="uid://cw62vf7ag4m1h" path="res://addons/hengo/scripts/code_preview.gd" id="10_r5155"]
[ext_resource type="PackedScene" uid="uid://b8u6g6i185o8y" path="res://addons/hengo/scenes/gd_editor.tscn" id="10_vu20g"]
[ext_resource type="Script" uid="uid://btva62mk8a3sy" path="res://addons/hengo/scripts/compile.gd" id="11_35y2j"]
[ext_resource type="Texture2D" uid="uid://bt4sh4ymnseob" path="res://addons/hengo/assets/icons/menu/none.svg" id="11_rvhdl"]
[ext_resource type="Texture2D" uid="uid://pkm3710o747j" path="res://addons/hengo/assets/icons/menu/compile.svg" id="11_xut0q"]
[ext_resource type="FontFile" uid="uid://wd6my6keapbk" path="res://addons/hengo/assets/fonts/Inter-Medium.ttf" id="12_wtrk7"]
[ext_resource type="Texture2D" uid="uid://lbtan5ojs7w8" path="res://addons/hengo/assets/images/grid_2.png" id="14_8emys"]
[ext_resource type="Texture2D" uid="uid://b0m53nlcuqhhw" path="res://addons/hengo/assets/images/grid_1.png" id="15_w813u"]
[ext_resource type="FontFile" uid="uid://cilbr27ige0dq" path="res://addons/hengo/assets/fonts/Inter-Light.ttf" id="16_xresw"]
[ext_resource type="Script" uid="uid://boxasjxccdkk1" path="res://addons/hengo/scripts/utils/side_panel_tab_container.gd" id="18_hg3xi"]
[ext_resource type="PackedScene" uid="uid://cxi2fc0kvcl6b" path="res://addons/hengo/scenes/utils/vc_action_buttons.tscn" id="20_w813u"]
[ext_resource type="FontFile" uid="uid://dr3uwsfctm3mb" path="res://addons/hengo/assets/fonts/Inter-Regular.ttf" id="20_y63ss"]
[ext_resource type="PackedScene" uid="uid://c4qu2ti8efl61" path="res://addons/hengo/scenes/side_bar.tscn" id="22_x5h56"]
[ext_resource type="FontFile" uid="uid://bidhodani4k31" path="res://addons/hengo/assets/fonts/Inter-Bold.ttf" id="23_tlngq"]
[ext_resource type="PackedScene" uid="uid://xg0nsq20dlya" path="res://addons/hengo/scenes/utils/tooltip.tscn" id="23_x5h56"]
[ext_resource type="Texture2D" uid="uid://k4vqsiuhja06" path="res://addons/hengo/assets/icons/cnode/enum.svg" id="24_hg3xi"]
[ext_resource type="Script" uid="uid://doifdm1hiujqd" path="res://addons/hengo/scripts/utils/signal_bus.gd" id="27_ji2ve"]
[ext_resource type="StyleBox" uid="uid://b0ss25v1amkw5" path="res://addons/hengo/resources/style_box/cnode.tres" id="33_n637n"]
[ext_resource type="Script" uid="uid://dyq7utko10qha" path="res://addons/hengo/scripts/docs_tool_tip.gd" id="36_alymh"]
[ext_resource type="StyleBox" uid="uid://dgycmph30efbx" path="res://addons/hengo/resources/style_box/event.tres" id="36_dyro1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_72kn2"]
bg_color = Color(0.109804, 0.109804, 0.109804, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8ipe"]
shader = ExtResource("9_5sxro")
shader_parameter/screen_size = Vector2(1904, 519)
shader_parameter/offset = Vector2(692.77, 123.146)
shader_parameter/zoom_factor = 0.399205
shader_parameter/alpha = 0.2
shader_parameter/text = ExtResource("14_8emys")
shader_parameter/text_size = 200.0

[sub_resource type="Gradient" id="Gradient_rg8iy"]
colors = PackedColorArray(0.352941, 0.733333, 0.937255, 1, 1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ehx0"]
bg_color = Color(1, 1, 1, 0.0862745)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bcrex"]
content_margin_right = 8.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ji2ve"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8emys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w813u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hg3xi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w813u"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.1, 0.1, 0.1, 0.890196)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.152941)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48snx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52efy"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.431373, 0.564706, 0.905882, 0.2)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rluxx"]
bg_color = Color(0.219501, 0.219501, 0.219501, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5te2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eipqu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tk0ia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ny40n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_74kfo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yt1h"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.230315, 0.230315, 0.230315, 0.458824)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lxtpw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1gx8m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xresw"]
bg_color = Color(0.123256, 0.126406, 0.129557, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x5h56"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xresw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vu20g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5155"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlcja"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.176471)
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.054902)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fc62w"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[node name="HengoRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_2muha")
script = ExtResource("2_velgh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="CNodeUI" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_72kn2")

[node name="Grid" type="TextureRect" parent="VBoxContainer/CNodeUI"]
process_mode = 4
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_r8ipe")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("15_w813u")

[node name="Cam" type="Node2D" parent="VBoxContainer/CNodeUI" node_paths=PackedStringArray("grid")]
script = ExtResource("3_84akk")
grid = NodePath("../Grid")

[node name="RefPoint" type="Marker2D" parent="VBoxContainer/CNodeUI/Cam"]
visible = false
position = Vector2(289, 313)

[node name="CommentContainer" type="Control" parent="VBoxContainer/CNodeUI/Cam"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1.0
offset_bottom = 1.0
theme = ExtResource("1_2muha")
metadata/_edit_use_anchors_ = true

[node name="CnodeContainer" type="Control" parent="VBoxContainer/CNodeUI/Cam"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1.0
offset_bottom = 1.0
theme = ExtResource("1_2muha")
metadata/_edit_use_anchors_ = true

[node name="ConnectionGuide" type="Line2D" parent="VBoxContainer/CNodeUI/Cam"]
unique_name_in_owner = true
visible = false
z_index = 2
width = 6.0
gradient = SubResource("Gradient_rg8iy")
texture = ExtResource("7_6jref")
texture_mode = 1
script = ExtResource("7_gj1gq")

[node name="Lines" type="Node2D" parent="VBoxContainer/CNodeUI/Cam"]

[node name="SelectionRect" type="ReferenceRect" parent="VBoxContainer/CNodeUI/Cam"]
process_mode = 4
visible = false
offset_left = 153.0
offset_top = 148.0
offset_right = 193.0
offset_bottom = 188.0
mouse_filter = 2
border_color = Color(0.749928, 0.915784, 0.889306, 1)
border_width = 3.0

[node name="Panel" type="Panel" parent="VBoxContainer/CNodeUI/Cam/SelectionRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6ehx0")

[node name="ref" type="Sprite2D" parent="VBoxContainer/CNodeUI/Cam"]
visible = false
modulate = Color(0.270724, 0.690067, 0.0733794, 1)
scale = Vector2(0.21, 0.21)
texture = ExtResource("9_si04b")

[node name="ref2" type="Sprite2D" parent="VBoxContainer/CNodeUI/Cam"]
visible = false
modulate = Color(0.270724, 0.690067, 0.0733794, 1)
position = Vector2(0, 3000)
scale = Vector2(0.21, 0.21)
texture = ExtResource("9_si04b")

[node name="VCActionButtons" parent="VBoxContainer/CNodeUI/Cam" instance=ExtResource("20_w813u")]
unique_name_in_owner = true
visible = false

[node name="Center2" type="Marker2D" parent="VBoxContainer/CNodeUI"]
visible = false
position = Vector2(-580, 0)

[node name="CNodeStatLabel" type="Label" parent="VBoxContainer/CNodeUI"]
unique_name_in_owner = true
process_mode = 4
modulate = Color(1, 1, 1, 0.658824)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_bcrex")
horizontal_alignment = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/CNodeUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="VBoxContainer/CNodeUI/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/Control/VBoxContainer"]
layout_mode = 2

[node name="Tabs" type="TabBar" parent="VBoxContainer/CNodeUI/HSplitContainer/Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tab_alignment = 2

[node name="ScriptInfoMsg" type="RichTextLabel" parent="VBoxContainer/CNodeUI/HSplitContainer/Control/VBoxContainer"]
unique_name_in_owner = true
process_mode = 4
layout_mode = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("20_y63ss")
theme_override_fonts/italics_font = ExtResource("16_xresw")
theme_override_fonts/bold_font = ExtResource("23_tlngq")
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/fill = SubResource("StyleBoxEmpty_ji2ve")
theme_override_styles/background = SubResource("StyleBoxEmpty_8emys")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w813u")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hg3xi")
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
shortcut_keys_enabled = false
horizontal_alignment = 2
justification_flags = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CNodeUI/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Control" type="Control" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SidePanel" type="PanelContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w813u")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="MenuBar" type="PanelContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_48snx")

[node name="CNodeActionBar" type="HBoxContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/MenuBar" node_paths=PackedStringArray("dashboard")]
layout_mode = 2
alignment = 2
script = ExtResource("7_sagw0")
dashboard = NodePath("DashBoard")

[node name="DashBoard" type="Button" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/MenuBar/CNodeActionBar"]
layout_mode = 2
tooltip_text = "Dashboard"
icon = ExtResource("11_rvhdl")
flat = true

[node name="ClassName" type="Label" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/MenuBar/CNodeActionBar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_52efy")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/MenuBar/CNodeActionBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_rluxx")

[node name="CompileContainer" type="HBoxContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/MenuBar/CNodeActionBar/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("11_35y2j")

[node name="Compile" type="Button" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/MenuBar/CNodeActionBar/PanelContainer/CompileContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("23_tlngq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i5te2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_eipqu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tk0ia")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ny40n")
disabled = true
text = "Compile"

[node name="LoadIcon" type="TextureRect" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/MenuBar/CNodeActionBar/PanelContainer/CompileContainer"]
modulate = Color(1, 1, 1, 0.419608)
layout_mode = 2
texture = ExtResource("11_xut0q")
expand_mode = 2
stretch_mode = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_74kfo")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_5yt1h")
current_tab = 0
script = ExtResource("18_hg3xi")

[node name="SideBar" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/TabContainer" instance=ExtResource("22_x5h56")]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
metadata/_tab_index = 0
metadata/_tab_name = "Props"

[node name="CodePreview" parent="VBoxContainer/CNodeUI/HSplitContainer/MarginContainer/SidePanel/VBoxContainer/TabContainer" instance=ExtResource("10_vu20g")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxEmpty_lxtpw")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_1gx8m")
placeholder_text = ""
editable = false
scroll_smooth = true
caret_move_on_right_click = false
caret_multiple = false
gutters_draw_line_numbers = true
code_completion_enabled = false
script = ExtResource("10_r5155")
metadata/_tab_index = 1
metadata/_tab_name = "Code Preview"

[node name="ScriptMsgContainer" type="PanelContainer" parent="VBoxContainer/CNodeUI"]
unique_name_in_owner = true
process_mode = 4
visible = false
z_index = 99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xresw")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/CNodeUI/ScriptMsgContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ScriptMsg" type="RichTextLabel" parent="VBoxContainer/CNodeUI/ScriptMsgContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("20_y63ss")
theme_override_fonts/italics_font = ExtResource("16_xresw")
theme_override_fonts/bold_font = ExtResource("23_tlngq")
theme_override_styles/fill = SubResource("StyleBoxEmpty_x5h56")
theme_override_styles/background = SubResource("StyleBoxEmpty_xresw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vu20g")
theme_override_styles/normal = SubResource("StyleBoxEmpty_r5155")
bbcode_enabled = true
text = "[center]
[font_size=24][b]Hengo Visual Script[/b][/font_size]
[font_size=16][color=#cccccc]
Please open the script to begin editing.
[/color][/font_size]
[font_size=13][i][color=#888888]Tip: You can open the script using the button at the top right to access the FileSystem,  
or via \"Select Resource\" (Ctrl + P), or directly from Scene dock.[/color][/i][/font_size]
[/center]"
fit_content = true
autowrap_mode = 0
shortcut_keys_enabled = false
justification_flags = 0
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="GeneralPopUp" parent="." instance=ExtResource("8_uxy8l")]
visible = false

[node name="GeneralPopUp" type="PanelContainer" parent="GeneralPopUp"]
unique_name_in_owner = true
custom_minimum_size = Vector2(230, 0)
offset_right = 230.0
offset_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("33_n637n")

[node name="VBoxContainer" type="VBoxContainer" parent="GeneralPopUp/GeneralPopUp"]
layout_mode = 2

[node name="Button" type="Button" parent="GeneralPopUp/GeneralPopUp/VBoxContainer"]
process_mode = 4
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
disabled = true
text = "Name"
icon = ExtResource("24_hg3xi")
flat = true
alignment = 0

[node name="PopupContainer" parent="." instance=ExtResource("8_uxy8l")]
unique_name_in_owner = true
visible = false

[node name="DropDownMenu" parent="PopupContainer" instance=ExtResource("9_xwbyp")]
unique_name_in_owner = true
theme = ExtResource("1_2muha")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="DocsToolTip" type="PanelContainer" parent="CanvasLayer" node_paths=PackedStringArray("rich_text_label", "title_label")]
unique_name_in_owner = true
visible = false
offset_right = 305.0
offset_bottom = 133.0
theme = ExtResource("1_2muha")
theme_override_styles/panel = ExtResource("36_dyro1")
script = ExtResource("36_alymh")
rich_text_label = NodePath("VBoxContainer/Text")
title_label = NodePath("VBoxContainer/Title")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DocsToolTip"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/DocsToolTip/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_wtrk7")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_mlcja")
text = "Title"

[node name="Text" type="RichTextLabel" parent="CanvasLayer/DocsToolTip/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("20_y63ss")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fc62w")
text = "A control for displaying text that can contain custom fonts, images, and basic formatting. RichTextLabel manages these as an internal tag stack. It also adapts itself to given width/heights.

Note: Assignments to text clear the tag stack and reconstruct it from the property's contents. Any edits made to text will erase previous edits made from other manual sources such as append_text and the push_* / pop methods.

Note: RichTextLabel doesn't support entangled BBCode tags. For example, instead of using [b]bold[i]bold italic[/b]italic[/i], use [b]bold[i]bold italic[/i][/b][i]italic[/i]."
selection_enabled = true

[node name="TooltipCanvas" type="CanvasLayer" parent="."]

[node name="Tooltip" parent="TooltipCanvas" instance=ExtResource("23_x5h56")]
unique_name_in_owner = true
visible = false
theme = ExtResource("1_2muha")

[node name="SignalBus" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("27_ji2ve")
